--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pyyaml = "^5.3.1"
 autopep8 = "^1.5.4"
 pytest = "^6.1.2"
 pylint = "^2.6.0"
+pdoc3 = "^0.9.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
