--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ pyyaml = "^5.3.1"
 autopep8 = "^1.5.4"
 pytest = "^6.1.2"
 pylint = "^2.6.0"
-pdoc3 = "^0.9.2"
+sphinx = "^3.4.1"
+sphinx-rtd-theme = "^0.5.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
