--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,13 +26,17 @@ include = [
 python = "^3.6"
 yacs = "^0.1.8"
 pyyaml = "^5.3.1"
+sphinx = { version = "^3.4.1", optional = true }
+sphinx-rtd-theme = { version = "^0.5.0", optional = true }
+m2r2 = { version = "^0.2.7", optional = true }
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
 pytest = "^6.1.2"
 pylint = "^2.6.0"
-sphinx = "^3.4.1"
-sphinx-rtd-theme = "^0.5.0"
+
+[tool.poetry.extras]
+docs = ["sphinx", "sphinx-rtd-theme", "m2r2"]
 
 [build-system]
 requires = ["poetry>=0.12"]
