--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [
     { include = "recap" }
 ]
 readme = "README.md"
-homepage = "https://github.com/georgw777/recap"
+homepage = "http://recap.readthedocs.io"
 repository = "https://github.com/georgw777/recap"
 keywords = ["flake8", "markdown", "lint"]
 classifiers = [
