--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
-          python -m pip install "poetry==poetry==1.2.0a2"
+          python -m pip install "poetry==1.2.0a2"
           poetry plugin add poetry-version-plugin
       - name: Configure poetry
         run: poetry config virtualenvs.create false
