--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,12 +14,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.8"
-      - name: Install Poetry
-        uses: snok/install-poetry@v1.1.1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      - name: Install dependencies
+      - name: Install poetry
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install "poetry==1.2.0a2"
+          poetry plugin add poetry-version-plugin
+      - name: Install Dependencies
         run: poetry install
       - name: Build and publish
         run: |
