--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,13 +25,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install "poetry==1.2.0a2"
-          poetry plugin add poetry-version-plugin
+          python -m poetry plugin add poetry-version-plugin
       - name: Configure poetry
-        run: poetry config virtualenvs.create false
+        run: python -m poetry config virtualenvs.create false
       - name: Install Dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: poetry install
+        run: python -m poetry install
       - name: Build
-        run: poetry build
+        run: python -m poetry build
       - name: Test with pytest
-        run: poetry run python -m pytest
+        run: python -m poetry run python -m pytest
