--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,12 +18,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install "poetry==1.2.0a2"
-          poetry plugin add poetry-version-plugin
+          python -m poetry plugin add poetry-version-plugin
       - name: Install Dependencies
         run: poetry install
       - name: Build and publish
         run: |
-          poetry config pypi-token.pypi $PYPI_TOKEN
-          poetry publish --build
+          python -m poetry config pypi-token.pypi $PYPI_TOKEN
+          python -m poetry publish --build
         env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
