--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,15 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
-          python -m pip install "poetry==1.2.0a2"
-          python -m poetry plugin add poetry-version-plugin
+          curl -sSL https://install.python-poetry.org | python3 -
+          poetry --version
+          poetry plugin add poetry-version-plugin
       - name: Configure poetry
-        run: python -m poetry config virtualenvs.create false
+        run: poetry config virtualenvs.create false
       - name: Install Dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: python -m poetry install
+        run: poetry install
       - name: Build
-        run: python -m poetry build
+        run: poetry build
       - name: Test with pytest
-        run: python -m poetry run python -m pytest
+        run: poetry run python -m pytest
