--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,13 +17,13 @@ jobs:
       - name: Install poetry
         run: |
           python -m pip install --upgrade pip
-          python -m pip install "poetry==1.2.0a2"
-          python -m poetry plugin add poetry-version-plugin
+          curl -sSL https://install.python-poetry.org | python3 -
+          poetry plugin add poetry-version-plugin
       - name: Install Dependencies
         run: poetry install
       - name: Build and publish
         run: |
-          python -m poetry config pypi-token.pypi $PYPI_TOKEN
-          python -m poetry publish --build
+          poetry config pypi-token.pypi $PYPI_TOKEN
+          poetry publish --build
         env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
