--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
-          curl -sSL https://install.python-poetry.org | python3 - --version 1.2.0
+          curl -sSL https://install.python-poetry.org | python3 - --version 1.2.0a2
           poetry --version
           poetry plugin add poetry-version-plugin
       - name: Configure poetry
