--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install poetry
         run: |
           python -m pip install --upgrade pip
-          curl -sSL https://install.python-poetry.org | python3 - --version 1.2.0
+          curl -sSL https://install.python-poetry.org | python3 - --version 1.2.0a2
           poetry plugin add poetry-version-plugin
       - name: Install Dependencies
         run: poetry install
