--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,9 +15,12 @@ jobs:
         with:
           python-version: "3.8"
       - name: Install poetry
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
           curl -sSL https://install.python-poetry.org | python3 - --version 1.2.0a2
+          poetry config virtualenvs.create true
+          poetry config virtualenvs.in-project true
           poetry plugin add poetry-version-plugin
       - name: Install Dependencies
         run: poetry install
