--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
-          curl -sSL https://install.python-poetry.org | python3 - --version 1.2.0a2
+          curl -sSL https://install.python-poetry.org | python3 -
           poetry config virtualenvs.create true
           poetry config virtualenvs.in-project true
           poetry plugin add poetry-version-plugin
