--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pyyaml = "^6.0.1"
 sphinx = { version = "^3.4.1", optional = true }
 sphinx-rtd-theme = { version = "^0.5.0", optional = true }
 m2r2 = { version = "^0.2.7", optional = true }
+Jinja2 = { version = "<3.1", optional = true }
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
@@ -37,7 +38,7 @@ pytest = "^6.1.2"
 pylint = "^2.6.0"
 
 [tool.poetry.extras]
-docs = ["sphinx", "sphinx-rtd-theme", "m2r2"]
+docs = ["sphinx", "sphinx-rtd-theme", "m2r2", "Jinja2"]
 
 [tool.poetry-version-plugin]
 source = "init"
