--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,11 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 yacs = "^0.1.8"
 wrapt = "^1.12.1"
 pyyaml = "^6.0.1"
-sphinx = { version = "^7.2.6", optional = true }
+sphinx = { version = "<7", optional = true }
 sphinx-rtd-theme = { version = "<2.0.0", optional = true }
 m2r2 = { version = "^0.3.3", optional = true }
 
